--- a/MinerProxy2/MinerProxy2.csproj
+++ b/MinerProxy2/MinerProxy2.csproj
@@ -11,6 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Coins\Monero\" />
+    <Folder Include="Coins\Lbry\" />
+    <Folder Include="Coins\Generic\" />
+    <Folder Include="Coins\PassThru\" />
+    <Folder Include="Coins\PASC\" />
+    <Folder Include="Coins\SIA\" />
+    <Folder Include="Coins\NiceHash\" />
+    <Folder Include="Coins\Zcash\" />
     <Folder Include="Config\Donation\" />
   </ItemGroup>
 
