--- a/MinerProxy2/MinerProxy2.csproj
+++ b/MinerProxy2/MinerProxy2.csproj
@@ -7,7 +7,13 @@
 		<RuntimeIdentifiers>win10-x64;win7-x64;ubuntu.14.04-x64</RuntimeIdentifiers>
 	</RuntimeIdentifiers>
     <ApplicationIcon />
-    <StartupObject />
+    <StartupObject>MinerProxy2.Program</StartupObject>
+    <AssemblyVersion>0.1.0.3</AssemblyVersion>
+    <FileVersion>1.1.0.3</FileVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>true</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,14 +25,13 @@
     <Folder Include="Coins\SIA\" />
     <Folder Include="Coins\NiceHash\" />
     <Folder Include="Coins\Zcash\" />
-    <Folder Include="Config\Donation\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
-    <PackageReference Include="Serilog" Version="2.7.1-dev-00960" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00792" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Serilog" Version="2.7.1-dev-00972" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.2-dev-00771" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00795" />
     <PackageReference Include="Telegram.Bot" Version="14.2.0-rc-452" />
   </ItemGroup>
 
