--- a/MinerProxy2/MinerProxy2.csproj
+++ b/MinerProxy2/MinerProxy2.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <TargetFramework>netcoreapp2.0</TargetFramework>
 	<RuntimeIdentifiers>
 		<RuntimeIdentifiers>win10-x64;win7-x64;ubuntu.14.04-x64</RuntimeIdentifiers>
