--- a/MinerProxy2/MinerProxy2.csproj
+++ b/MinerProxy2/MinerProxy2.csproj
@@ -15,6 +15,8 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <Optimize>true</Optimize>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
